# rust-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
src/: db.rs  main.rs
src/api/: users.rs
src/config/: db.rs  encryption.rs  jwt.rs  mod.rs  routes.rs
src/controllers/: products.rs  users.rs
src/db/: connection.rs  operations.rs
src/db/operations/: products.rs  users.rs
src/db/sql/: orders.sql  products.sql  users.sql
src/db/sql/blog/: posts.sql
src/db/sql/news/: articles.sql
src/db/tables/: blog.rs  enums.rs  mod.rs  news.rs  orders.rs  password_manager.rs  products.rs  store.rs  users.rs
src/handlers/: auth.rs  create_crud_handler.sh  emails.rs  mod.rs  orders.rs  products.rs  test.rs  users.rs
src/handlers/auth/: auth.rs  emails.rs  mod.rs  profile.rs
src/handlers/blog/: mod.rs  posts.rs  subscriptions.rs
src/handlers/news/: articles.rs  comments.rs  likes.rs  mod.rs  tags.rs  views.rs
src/handlers/password_manager/: encryption.rs  key.rs  mod.rs  user_data.rs
src/handlers/store/: mod.rs  orders.rs  products.rs
src/models/: auth.rs  mod.rs  order.rs  product.rs  user.rs
src/models/blog/: mod.rs  post.rs  subscription.rs
src/models/news/: article.rs  comment.rs  like.rs  mod.rs  news.rs  view.rs
src/models/password_manager/: user_data.rs
src/models/store/: mod.rs  order.rs  product.rs
src/routes/: auth.rs  blog.rs  instagram.rs  live_stream.rs  mod.rs  news.rs  orders.rs  password_manager.rs  pinterest.rs  products.rs  store.rs  user_routes.rs  users.rs  video_stream.rs
src/shared/: types.rs
src/tests/: users.rs
src/utils/: admin.rs  auth.rs  bcrypt.rs  emails.rs  encryption.rs  faker.rs  jwt.rs  logger.rs  mod.rs  password_manager.rs
