[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
aes = "0.8.4"
argon2 = "0.5.3"
base64 = "0.22.1"
bcrypt = "0.16.0"
block-padding = "0.3.3"
bytes = "1.9.0"
cbc = "0.1.2"
chrono = { version = "0.4.38", features = ["serde"] }
cipher = "0.4.4"
colored = "2.1.0"
dotenv = "0.15.0"
faker_rand = "0.1.1"
fern = "0.7.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.10"
log = "0.4.22"
postgres-types = "0.2.8"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
